Source/ProtocolParser/Keysight34465A/Keysight34465ASCPIParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Develop\Open-SCPI-Protocol-Emulator\ProtocolParser\Keysight34465A\Keysight34465ASCPI.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ProtocolParser.Keysight34465A {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class Keysight34465ASCPIParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, ConfigureVoltage=5, ConfigureCurrent=6, 
		MeasureCurrent=7, MeasureVoltage=8, DisplayText=9, DisplayTextClear=10, 
		SenseVoltageImpedance=11, AC=12, DC=13, AUTO=14, MIN=15, MAX=16, DEF=17, 
		Space=18, CommaSeparator=19, QuestionMark=20, AutoTRUE=21, AutoFALSE=22, 
		Number=23, QuotedString=24;
	public const int
		RULE_command = 0, RULE_identificationQuery = 1, RULE_readQuery = 2, RULE_abortCommand = 3, 
		RULE_configureCurrentCommand = 4, RULE_configureVoltageCommand = 5, RULE_measureCurrentQuery = 6, 
		RULE_measureVoltageQuery = 7, RULE_displayTextCommand = 8, RULE_displayTextClearCommand = 9, 
		RULE_senseVoltageImpedanceCommand = 10, RULE_currentParameters = 11, RULE_voltageParameters = 12;
	public static readonly string[] ruleNames = {
		"command", "identificationQuery", "readQuery", "abortCommand", "configureCurrentCommand", 
		"configureVoltageCommand", "measureCurrentQuery", "measureVoltageQuery", 
		"displayTextCommand", "displayTextClearCommand", "senseVoltageImpedanceCommand", 
		"currentParameters", "voltageParameters"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*IDN?'", "'READ?'", "'ABOR'", "'ABORt'", null, null, null, null, 
		null, null, null, "'AC'", "'DC'", "'AUTO'", "'MIN'", "'MAX'", "'DEF'", 
		null, null, "'?'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "ConfigureVoltage", "ConfigureCurrent", 
		"MeasureCurrent", "MeasureVoltage", "DisplayText", "DisplayTextClear", 
		"SenseVoltageImpedance", "AC", "DC", "AUTO", "MIN", "MAX", "DEF", "Space", 
		"CommaSeparator", "QuestionMark", "AutoTRUE", "AutoFALSE", "Number", "QuotedString"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Keysight34465ASCPI.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static Keysight34465ASCPIParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Keysight34465ASCPIParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Keysight34465ASCPIParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentificationQueryContext identificationQuery() {
			return GetRuleContext<IdentificationQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(Keysight34465ASCPIParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ReadQueryContext readQuery() {
			return GetRuleContext<ReadQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AbortCommandContext abortCommand() {
			return GetRuleContext<AbortCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConfigureCurrentCommandContext configureCurrentCommand() {
			return GetRuleContext<ConfigureCurrentCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MeasureCurrentQueryContext measureCurrentQuery() {
			return GetRuleContext<MeasureCurrentQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConfigureVoltageCommandContext configureVoltageCommand() {
			return GetRuleContext<ConfigureVoltageCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MeasureVoltageQueryContext measureVoltageQuery() {
			return GetRuleContext<MeasureVoltageQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DisplayTextCommandContext displayTextCommand() {
			return GetRuleContext<DisplayTextCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DisplayTextClearCommandContext displayTextClearCommand() {
			return GetRuleContext<DisplayTextClearCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SenseVoltageImpedanceCommandContext senseVoltageImpedanceCommand() {
			return GetRuleContext<SenseVoltageImpedanceCommandContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 0, RULE_command);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 26;
				identificationQuery();
				State = 27;
				Match(Eof);
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 29;
				readQuery();
				State = 30;
				Match(Eof);
				}
				break;
			case T__2:
			case T__3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 32;
				abortCommand();
				State = 33;
				Match(Eof);
				}
				break;
			case ConfigureCurrent:
				EnterOuterAlt(_localctx, 4);
				{
				State = 35;
				configureCurrentCommand();
				State = 36;
				Match(Eof);
				}
				break;
			case MeasureCurrent:
				EnterOuterAlt(_localctx, 5);
				{
				State = 38;
				measureCurrentQuery();
				State = 39;
				Match(Eof);
				}
				break;
			case ConfigureVoltage:
				EnterOuterAlt(_localctx, 6);
				{
				State = 41;
				configureVoltageCommand();
				State = 42;
				Match(Eof);
				}
				break;
			case MeasureVoltage:
				EnterOuterAlt(_localctx, 7);
				{
				State = 44;
				measureVoltageQuery();
				State = 45;
				Match(Eof);
				}
				break;
			case DisplayText:
				EnterOuterAlt(_localctx, 8);
				{
				State = 47;
				displayTextCommand();
				State = 48;
				Match(Eof);
				}
				break;
			case DisplayTextClear:
				EnterOuterAlt(_localctx, 9);
				{
				State = 50;
				displayTextClearCommand();
				State = 51;
				Match(Eof);
				}
				break;
			case SenseVoltageImpedance:
				EnterOuterAlt(_localctx, 10);
				{
				State = 53;
				senseVoltageImpedanceCommand();
				State = 54;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentificationQueryContext : ParserRuleContext {
		public IdentificationQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identificationQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentificationQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentificationQueryContext identificationQuery() {
		IdentificationQueryContext _localctx = new IdentificationQueryContext(Context, State);
		EnterRule(_localctx, 2, RULE_identificationQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReadQueryContext : ParserRuleContext {
		public ReadQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_readQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReadQueryContext readQuery() {
		ReadQueryContext _localctx = new ReadQueryContext(Context, State);
		EnterRule(_localctx, 4, RULE_readQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AbortCommandContext : ParserRuleContext {
		public AbortCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_abortCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbortCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AbortCommandContext abortCommand() {
		AbortCommandContext _localctx = new AbortCommandContext(Context, State);
		EnterRule(_localctx, 6, RULE_abortCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			_la = TokenStream.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConfigureCurrentCommandContext : ParserRuleContext {
		public IToken electricityType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ConfigureCurrent() { return GetToken(Keysight34465ASCPIParser.ConfigureCurrent, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AC() { return GetToken(Keysight34465ASCPIParser.AC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DC() { return GetToken(Keysight34465ASCPIParser.DC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(Keysight34465ASCPIParser.Space, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CurrentParametersContext currentParameters() {
			return GetRuleContext<CurrentParametersContext>(0);
		}
		public ConfigureCurrentCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configureCurrentCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfigureCurrentCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigureCurrentCommandContext configureCurrentCommand() {
		ConfigureCurrentCommandContext _localctx = new ConfigureCurrentCommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_configureCurrentCommand);
		int _la;
		try {
			State = 70;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64;
				Match(ConfigureCurrent);
				State = 65;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66;
				Match(ConfigureCurrent);
				State = 67;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 68;
				Match(Space);
				State = 69;
				currentParameters();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConfigureVoltageCommandContext : ParserRuleContext {
		public IToken electricityType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ConfigureVoltage() { return GetToken(Keysight34465ASCPIParser.ConfigureVoltage, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AC() { return GetToken(Keysight34465ASCPIParser.AC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DC() { return GetToken(Keysight34465ASCPIParser.DC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(Keysight34465ASCPIParser.Space, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VoltageParametersContext voltageParameters() {
			return GetRuleContext<VoltageParametersContext>(0);
		}
		public ConfigureVoltageCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configureVoltageCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfigureVoltageCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigureVoltageCommandContext configureVoltageCommand() {
		ConfigureVoltageCommandContext _localctx = new ConfigureVoltageCommandContext(Context, State);
		EnterRule(_localctx, 10, RULE_configureVoltageCommand);
		int _la;
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72;
				Match(ConfigureVoltage);
				State = 73;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74;
				Match(ConfigureVoltage);
				State = 75;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 76;
				Match(Space);
				State = 77;
				voltageParameters();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MeasureCurrentQueryContext : ParserRuleContext {
		public IToken electricityType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MeasureCurrent() { return GetToken(Keysight34465ASCPIParser.MeasureCurrent, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuestionMark() { return GetToken(Keysight34465ASCPIParser.QuestionMark, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AC() { return GetToken(Keysight34465ASCPIParser.AC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DC() { return GetToken(Keysight34465ASCPIParser.DC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(Keysight34465ASCPIParser.Space, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CurrentParametersContext currentParameters() {
			return GetRuleContext<CurrentParametersContext>(0);
		}
		public MeasureCurrentQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_measureCurrentQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMeasureCurrentQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MeasureCurrentQueryContext measureCurrentQuery() {
		MeasureCurrentQueryContext _localctx = new MeasureCurrentQueryContext(Context, State);
		EnterRule(_localctx, 12, RULE_measureCurrentQuery);
		int _la;
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80;
				Match(MeasureCurrent);
				State = 81;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 82;
				Match(QuestionMark);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				Match(MeasureCurrent);
				State = 84;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 85;
				Match(QuestionMark);
				State = 86;
				Match(Space);
				State = 87;
				currentParameters();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MeasureVoltageQueryContext : ParserRuleContext {
		public IToken electricityType;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MeasureVoltage() { return GetToken(Keysight34465ASCPIParser.MeasureVoltage, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuestionMark() { return GetToken(Keysight34465ASCPIParser.QuestionMark, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AC() { return GetToken(Keysight34465ASCPIParser.AC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DC() { return GetToken(Keysight34465ASCPIParser.DC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(Keysight34465ASCPIParser.Space, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VoltageParametersContext voltageParameters() {
			return GetRuleContext<VoltageParametersContext>(0);
		}
		public MeasureVoltageQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_measureVoltageQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMeasureVoltageQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MeasureVoltageQueryContext measureVoltageQuery() {
		MeasureVoltageQueryContext _localctx = new MeasureVoltageQueryContext(Context, State);
		EnterRule(_localctx, 14, RULE_measureVoltageQuery);
		int _la;
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				Match(MeasureVoltage);
				State = 91;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 92;
				Match(QuestionMark);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				Match(MeasureVoltage);
				State = 94;
				_localctx.electricityType = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==AC || _la==DC) ) {
					_localctx.electricityType = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 95;
				Match(QuestionMark);
				State = 96;
				Match(Space);
				State = 97;
				voltageParameters();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DisplayTextCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DisplayText() { return GetToken(Keysight34465ASCPIParser.DisplayText, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(Keysight34465ASCPIParser.Space, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuotedString() { return GetToken(Keysight34465ASCPIParser.QuotedString, 0); }
		public DisplayTextCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_displayTextCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDisplayTextCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DisplayTextCommandContext displayTextCommand() {
		DisplayTextCommandContext _localctx = new DisplayTextCommandContext(Context, State);
		EnterRule(_localctx, 16, RULE_displayTextCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(DisplayText);
			State = 101;
			Match(Space);
			State = 102;
			Match(QuotedString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DisplayTextClearCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DisplayTextClear() { return GetToken(Keysight34465ASCPIParser.DisplayTextClear, 0); }
		public DisplayTextClearCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_displayTextClearCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKeysight34465ASCPIVisitor<TResult> typedVisitor = visitor as IKeysight34465ASCPIVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDisplayTextClearCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
